# difference.rs

./: .gitignore  .travis.yml  Cargo.toml  Examples.md  Fightcaves.c++  README.md  Toonova.rb  index.html  search-index.js
difference/: Changeset.t.html  Difference.t.html  enum.Difference.html  fn.diff.html  fn.print_diff.html  index.html  macro.assert_diff.html  print_diff.v.html  sidebar-items.js  struct.Changeset.html
examples/: assert_diff.rs  github-style.rs  line-by-line.rs  underline-words.rs
getopts/: enum.Fail.html  enum.FailType.html  enum.HasArg.html  enum.Occur.html  enum.ParsingStyle.html  index.html  struct.Matches.html  struct.Options.html  type.Result.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/std/error/: trait.Error.js
src/: display.rs  lcs.rs  lib.rs  main.rs  merge.rs
src/difference/src/: display.rs.html  lcs.rs.html  lib.rs.html  merge.rs.html
src/getopts/: lib.rs.html
tests/: quickcheck.rs
