[package]
name = "difference"
version = "0.4.1"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "A Rust text diffing and assertion library."
repository = "https://github.com/johannhof/difference.rs"
documentation = "https://johannhof.github.io/difference.rs/difference/index.html"
readme = "README.md"
keywords = ["diff", "text", "changes", "assert"]
license = "MIT"

[[bin]]
name = "difference"
doc = false

[features]
default = []
unstable = []

[dependencies]
getopts = "0.2"

[dev-dependencies]
term = "0.2.7"
